plugins {
    id 'java'
}

group 'com.interface21'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava {
    options.compilerArgs << '-parameters'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-parameters'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:2.3.6'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    implementation 'org.reflections:reflections:0.10.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'ch.qos.logback:logback-classic:1.5.6'
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    testImplementation 'org.assertj:assertj-core:3.26.0'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.springframework:spring-test:6.1.10'
}

test {
    useJUnitPlatform()
}
